[ADD] - ORDER - phase 3 for order creation - review everything for it to finally works